# judicial-process-app-back

./: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: main.yml
core/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_client_process_observation_evolution.py  0003_client_created_at_alter_process_client.py  0004_process_type.py  0005_alter_evolution_process_alter_observation_process.py  0006_client_profile_image_honorary.py  0007_client_assigned_attendant_alter_evolution_created_by_and_more.py  0008_client_is_active.py  0009_evolution_file.py  0010_tenantcompany_client_tenant_company_and_more.py
core/tests/: test_views.py
dev_app/: utils.py
dev_app/management/commands/: fake_populate_database.py
frontend/: index.html
nginx/: conf.d  default.conf
project/: settings.py  urls.py
